--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
               <h4>WordPress Creative Theme
                 2017 </h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed risus pretium, convallis nunc quis, sodales mauris. Aliquam erat volutpat. Integer tincidunt, tortor ut tincidunt tincidunt, lorem eros tincidunt erat, eu porttitor augue nisi at arcu. Pellentesque hendrerit ante risus, at tempus sem interdum ac. Vivamus ultrices, nunc ut vulputate placerat, sapien magna vulputate nisi, quis imperdiet est leo ac enim.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed risus pretium, convallis nunc quis,
+                sodales mauris. Aliquam erat volutpat. Integer tincidunt, tortor ut tincidunt tincidunt, lorem eros
+                tincidunt erat, eu porttitor augue nisi at arcu. Pellentesque hendrerit ante risus, at tempus sem
+                interdum ac. Vivamus ultrices, nunc ut vulputate placerat, sapien magna vulputate nisi, quis imperdiet
+                est leo ac enim.
               </p>
               <time>April 29, 2016</time>
             </div>
@@ -112,7 +116,11 @@
               <h5>DESIGN</h5>
               <h4>Visual Page Builder for Avenue</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed risus pretium, convallis nunc quis, sodales mauris. Aliquam erat volutpat. Integer tincidunt, tortor ut tincidunt tincidunt, lorem eros tincidunt erat, eu porttitor augue nisi at arcu. Pellentesque hendrerit ante risus, at tempus sem interdum ac. Vivamus ultrices, nunc ut vulputate placerat, sapien magna vulputate nisi, quis imperdiet est leo ac enim.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed risus pretium, convallis nunc quis,
+                sodales mauris. Aliquam erat volutpat. Integer tincidunt, tortor ut tincidunt tincidunt, lorem eros
+                tincidunt erat, eu porttitor augue nisi at arcu. Pellentesque hendrerit ante risus, at tempus sem
+                interdum ac. Vivamus ultrices, nunc ut vulputate placerat, sapien magna vulputate nisi, quis imperdiet
+                est leo ac enim.
               </p>
               <time>
                 April 29, 2016
@@ -161,7 +169,7 @@
             </div>
             <div class="content-area">
               <h5>WORDPRESS</h5>
-              <h4>Explore the Pacific Northwest   </h4>
+              <h4>Explore the Pacific Northwest </h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed risus pretium, convallis nunc
                 quis, sodales mauris. Aliquam erat volutpat. Integer tincidunt, tortor ut tincidunt tincidunt, lorem
                 eros tincidunt erat, eu porttitor augue nisi at arcu. Pellentesque hendrerit ante risus, at tempus
@@ -176,42 +184,68 @@
       </div>
       <div class="search-menu">
         <div class="search">
-          <input placeholder="saerch">
+          <input placeholder="search">
           <img src="./images/vector.png" alt="Vector">
         </div>
-        <div class="recent-posts"> 
-          <h5>RECENT POSTS</h5>
-          <ul>
-            <li>Photo Gallery in WordPress</li>
-            <li>Jeff Morgan</li>
-            <li>Money Saving Travel Hacks</li>
-            <li>WordPress Creative Theme 2017</li>
-            <li>Frankfurt Motor Show: Opening</li>
-          </ul>
-        </div>
-        <div class="recent-comments"> 
-          <h5>RECENT COMMENTS</h5>
-          <ul>
-            <li>Nikol on Backpack with Floral Front Pocket</li>
-            <li>Nikol on Backpack with Floral Front Pocket</li>
-            <li>Nikol on Backpack with Floral Front Pocket</li>
-            <li>Nikol on Backpack with Floral Front Pocket</li>
-          </ul>
-        </div>
-        <div class="meta"> 
-          <h5>META</h5>
-          <ul>
-            <li>Log in</li>
-            <li>Entries RSS</li>
-            <li>Comments RSS</li>
-            <li>WordPress.org</li>
-          </ul>
+        <div class="menu">
+          <div class="recent-posts">
+            <h5>RECENT POSTS</h5>
+            <ul>
+              <li>Photo Gallery in WordPress</li>
+              <li>Jeff Morgan</li>
+              <li>Money Saving Travel Hacks</li>
+              <li>WordPress Creative Theme 2017</li>
+              <li>Frankfurt Motor Show: Opening</li>
+            </ul>
+          </div>
+          <div class="recent-comments">
+            <h5>RECENT COMMENTS</h5>
+            <ul>
+              <li>Nikol on Backpack with Floral <br /> Front Pocket</li>
+              <li>Nikol on Backpack with Floral <br /> Front Pocket</li>
+              <li>Nikol on Backpack with Floral <br /> Front Pocket</li>
+              <li>Nikol on Backpack with Floral <br /> Front Pocket</li>
+            </ul>
+          </div>
+          <div class="meta">
+            <h5>META</h5>
+            <ul>
+              <li>Log in</li>
+              <li>Entries RSS</li>
+              <li>Comments RSS</li>
+              <li>WordPress.org</li>
+            </ul>
+          </div>
+          <div class="circle-arrow">
+            <img class="circle" src="./images/circle.png" alt="circle">
+            <img class="arrow" src="./images/arrow.png" alt="arrow">
+          </div>
         </div>
       </div>
     </div>
   </main>
-
-
+  <footer>
+    <div class="sum-footer">
+      <div class="logo-footer">
+        <div class="older-post">
+          <h3>Older post</h3>
+        </div>
+        <div>
+          <img src="./images/logo-footer.png" alt="logo">
+        </div>
+      </div>
+      <div class="contact">
+        <img src="./images/logo-facebook.png" alt="facebook">
+        <img src="./images/logo-twitter.png" alt="twitter">
+        <img src="./images/logo-monogram.png" alt="monogram">
+        <img src="./images/logo-linkedin.png" alt="linkedin">
+        <div>
+        <p>COPYRIGHT © 2019</p>
+        <span>YELLOWBLOCKS</span>
+      </div>
+    </div>
+    </div>
+  </footer>
 </body>
 
 </html>
